--- a/pages/conminuity/conminuity.wxml
+++ b/pages/conminuity/conminuity.wxml
@@ -1,53 +1,68 @@
 <view class='com-page'>
-<view>
+  <view>
 
-  <image src="../../images/rotating.png" class="img-plus-style" animation="{{animPlus}}" bindtap="torelease"></image>
-</view>
+    <image src="../../images/rotating.png" class="img-plus-style" animation="{{animPlus}}" bindtap="torelease"></image>
+  </view>
   <view class='guanggao'>
-      <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" circular="{{circular}}">
-    <block wx:for="{{imgUrls}}">
-      <swiper-item>
-        <image src="{{item}}" class="slide-image" />
-      </swiper-item>
-    </block>
-  </swiper>
-      </view>
+    <swiper indicator-dots="{{indicatorDots}}" autoplay="{{autoplay}}" interval="{{interval}}" duration="{{duration}}" circular="{{circular}}">
+      <block wx:for="{{imgUrls}}">
+        <swiper-item>
+          <image src="{{item}}" class="slide-image" />
+        </swiper-item>
+      </block>
+    </swiper>
+  </view>
 
-       <view class="swiper-tab">
+  <view class="swiper-tab">
     <view class="swiper-tab-item {{currentTab==0?'active':''}}" data-current="0" bindtap="clickTab">最新</view>
     <view class="swiper-tab-item {{currentTab==1?'active':''}}" data-current="1" bindtap="clickTab">热门</view>
   </view>
   <swiper current="{{currentTab}}" duration="300" bindchange="swiperTab" style='height:1000rpx;' circular='true'>
 
-       <swiper-item>
-      <view class='current' bindtap='detailPage' >
-      <view class='user-info'><view class='touxiang'></view><view class='nicheng'><view class='top'>你的宝宝</view><view class='time'>2018.08.26</view></view></view>
-          <view class='user-content'><view class='con'><text>黄金求上分</text></view></view>
-              <view class='pinglun'></view>
-      </view>     
+    <swiper-item>
+      <view class='current' bindtap='detailPage'>
+        <view class='user-info'>
+          <view class='touxiang'></view>
+          <view class='nicheng'>
+            <view class='top'>你的宝宝</view>
+            <view class='time'>2018.08.26</view>
+          </view>
+        </view>
+        <view class='user-content'>
+          <view class='con'>
+            <text>黄金求上分</text>
+          </view>
+        </view>
+        <view class='pinglun'>
+          <view class='p-con'>
+          <view class='p-pl'>评论</view>
+          <view class='p-number'>7</view>
+          </view>
+        </view>
+      </view>
     </swiper-item>
     <swiper-item>
-      <view class='current'  bindtap='detailPage'  >
+      <view class='current' bindtap='detailPage'>
         <view class=' current-image '>
-        <!-- <image src='{{item.affairsPic}}' mode='aspectFill'></image> -->
+          <!-- <image src='{{item.affairsPic}}' mode='aspectFill'></image> -->
         </view>
         <view class='current-text '>
           <view class='current-text-cont '>
-             <!-- {{item.title}} -->
+            <!-- {{item.title}} -->
           </view>
           <view class='current-text-Identification '>
-            <view class='Identification' >
+            <view class='Identification'>
               <!-- {{item.subordinate}} -->
             </view>
             <view class='time'>
-              </view>
+            </view>
           </view>
         </view>
-      </view>     
+      </view>
     </swiper-item>
   </swiper>
 
-      <!-- <view class="swiper-tab">
+  <!-- <view class="swiper-tab">
     <view class="swiper-tab-item {{currentTab==0?'active':''}}" data-current="0" bindtap="clickTab">最新</view>
     <view class="swiper-tab-item {{currentTab==1?'active':''}}" data-current="1" bindtap="clickTab">热门</view>
   </view>
@@ -72,6 +87,6 @@
          </view>
   </scroll-view> -->
 
- 
- 
+
+
 </view>
