--- a/pages/conminuity/conminuity.wxss
+++ b/pages/conminuity/conminuity.wxss
@@ -126,28 +126,25 @@ overflow: hidden;
   width: 100%;
   height: 500rpx;
   /* background: papayawhip; */
-  border: 1px solid black;
   display: flex;
   flex-direction: column;
+  justify-content: space-between;
   /* border: 2rpx solid #f7f7f7; */
     box-shadow: 1rpx 1rpx 20rpx #E1E1E4;
 }
 .user-info{
   width: 100%;
   height: 30%;
-  border: 1px solid black;
   display: flex;
   align-items: center;
 }
 .user-content{
   width: 100%;
-  height: 40%;
-  border: 1px solid black;
 }
 .pinglun{
   width: 100%;
   height: 30%;
-  border: 1px solid black;
+
 }
 .swiper-tab {
   margin: 0 auto;
@@ -188,14 +185,6 @@ swiper {
   margin: 0 auto;
   margin-top: 20rpx;
   display: flex;
-  justify-content: center;
-  align-items: center;
-}
-
-.current-image {
-  width: 240rpx;
-  height: 200rpx;
-  /* background: aqua; */
 }
 
 .current-text {
@@ -238,22 +227,22 @@ swiper {
   height: 20rpx;
 }
 .touxiang{
-  width: 14%;
-  height: 100%;
+  width: 10%;
+  height: 67%;
+  margin-left: 10rpx;
   border-radius: 30px;
   border: 1px solid black;
 }
 .nicheng{
   width: 20%;
   height: 100%;
-  border: 1px solid black;
   display: flex;
   flex-direction: column;
   justify-content: flex-start;
 
 }
 .top{
-  margin-top: 10rpx;
+  margin-top: 24rpx;
   font-size: 20rpx;
   font-weight: 600;
 }
@@ -263,9 +252,9 @@ swiper {
     color: rgba(0, 0, 0, 0.5);
 }
 .con{
-width: 90%;
+width: 98%;
 height: 100%;
-border:1px solid black;
+flex-wrap: wrap;
 font-size: 21rpx;
 display: flex;
 justify-content: flex-start;
@@ -273,4 +262,17 @@ justify-content: flex-start;
 .con text{
   margin-top: 10rpx;
   margin-left: 15rpx;
+}
+.p-con{
+  width: 19%;
+  height: 100%;
+  float: right;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20rpx;
+  color: rgba(0, 0, 0, 0.5);
+}
+.p-number{
+  margin-left: 7rpx;
 }
