--- a/pages/conminuity/conminuity.wxss
+++ b/pages/conminuity/conminuity.wxss
@@ -8,6 +8,7 @@ page {
   margin-top: 5px;
   width: 100%;
   height: 300rpx;
+  margin-bottom: 22rpx;
 }
 .swiper {
   height: 150rpx;
@@ -32,6 +33,7 @@ page {
   height: 60rpx;
   line-height: 58rpx;
   display: flex;
+  align-items: center;
   flex-flow: row;
   justify-content: space-between;
   box-shadow: 2rpx 2rpx 30rpx #7e7c7c;
@@ -52,6 +54,7 @@ page {
 
 swiper {
   text-align: center;
+    margin-top: 22rpx;
 }
 .img-plus-style {
     height: 80rpx;
@@ -98,7 +101,7 @@ margin-top: 15rpx;
 display: flex;
 white-space:nowrap;
 align-items: center;
-overflow: hidden;
+
 
   width: 95%;
   height: 95%;
@@ -120,7 +123,6 @@ overflow: hidden;
 .hua1{
   width: 100%;
   height: 100%;
-  overflow: hidden;
 }
 .current {
   width: 100%;
@@ -227,14 +229,18 @@ swiper {
   height: 20rpx;
 }
 .touxiang{
-  width: 10%;
+  width: 11%;
   height: 67%;
   margin-left: 10rpx;
   border-radius: 30px;
-  border: 1px solid black;
+}
+.touxiang image{
+width:100%;
+height:100%;
+border-radius:50%;
 }
 .nicheng{
-  width: 20%;
+  width: 30%;
   height: 100%;
   display: flex;
   flex-direction: column;
@@ -243,12 +249,12 @@ swiper {
 }
 .top{
   margin-top: 24rpx;
-  font-size: 20rpx;
+  font-size: 30rpx;
   font-weight: 600;
 }
 .time{
   margin-top: 8rpx;
-    font-size: 13rpx;
+    font-size: 18rpx;
     color: rgba(0, 0, 0, 0.5);
 }
 .con{
@@ -276,3 +282,14 @@ justify-content: flex-start;
 .p-number{
   margin-left: 7rpx;
 }
+.Bottom{
+  width: 100%;
+  height: 50rpx;
+  text-align: center;
+  font-size: 20rpx;
+ padding-top:10rpx;
+ margin-top: 10rpx;
+  border-top:1rpx solid #E1E1E4;
+  color: #E1E1E4
+}
+
