--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -11,26 +11,24 @@
     <!-- </button> -->
   <!-- </form> -->
 
-  <view class='orderList' bindtap='toOrderDetail' data-orderid='{{item.orderId}}' wx:for="{{orderList}}" wx:key="key">
+  <view class='orderList' bindtap='toOrderDetail' data-orderid='{{item.orderId}}' wx:for="{{orderList}}"   wx:key="key">
     <view class='order-head'>
-      <image class='order-head-img' mode='aspectFill' src='{{item.headImgUrl}}'></image>
+      <!-- <image class='order-head-img' mode='aspectFill' src='../images/tianjia.png'></image> -->
       <view class='order-head-mes'>
-        <view class='order-head-nickname'>{{item.seller}}</view>
-        <view class='order-head-pos'>{{item.postion}}</view>
+        <view class='order-head-nickname'>小辞官{{item.shopName}}</view>
       </view>
-      <view class='order-head-goodsWay'>{{item.goodsWay}}</view>
+      <view class='order-head-goodsWay'>二手{{item.gtype}}</view>
     </view>
     <view class='order-mes'>
-      <image class='order-mes-img' src='{{item.goodsImg[0]}}' data-img='{{item}}' mode='aspectFill' wx:key="key"></image>
+      <image class='order-mes-img' src='{{item.gimage}}' data-img='{{item}}' mode='aspectFill' wx:key="key"></image>
       <view class='orderTitle'>
-        <view class='orderTitle-text'>{{item.goodsTitle}}</view>
-        <view class='tradingWay'>{{item.tradingWay}}</view>
+        <view class='orderTitle-text'>大城市的出生地{{item.content}}</view>
       </view>
-      <view class='orderPrice'>￥{{item.price}}</view>
-      <view class='orderNum'>x1</view>
+      <view class='orderPrice'>￥1{{item.price}}</view>
+      <view class='orderNum'>x1{{item.num}}</view>
     </view>
     <view class='orderTotalPrice'>
-      <view class='orderTotalPrice-text'>合计：￥{{item.orderPrice}}</view>
+      <view class='orderTotalPrice-text'>合计：￥1{{item.sum}}</view>
     </view>
     <view class='orderBtn'>
       <view class='order-all'>
