--- a/pages/xiangqing/xiangqing.wxss
+++ b/pages/xiangqing/xiangqing.wxss
@@ -1,1 +1,257 @@
 /* pages/xiangqing/xiangqing.wxss */
+page {
+  width: 100%;
+  height: 100%;
+    background-color:rgb(242, 242, 242);
+}
+.guanggao{
+  margin-top: 5px;
+  width: 100%;
+  height: 300rpx;
+  margin-bottom: 22rpx;
+}
+.bot{
+  display: flex;
+  align-items: center;
+}
+
+.img-plus-style {
+    height: 80rpx;
+    width: 80rpx;
+    border-radius: 120rpx;
+    /* box-shadow: 1rpx 1rpx 20rpx #f65959; */
+    position: fixed;
+    bottom: 100rpx;
+    background: white;
+    right: 30rpx;
+    z-index: 100;
+    /* opacity: .8 */
+  }
+  .tiezi-all{
+    width: 100%;
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+  }
+.tiezi{
+  margin-top: 15rpx;
+  width: 100%;
+  height: 1000rpx;
+  display: flex;
+  flex-direction: column;
+}
+.cont1{
+width: 90%;
+height: 400rpx;
+border-radius: 8px;
+background: red;
+margin-top: 15rpx;
+}
+.content{
+  margin-top: 35rpx;
+  width: 100%;
+  height: 600rpx;
+  border: 1px solid black;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+.new{
+  width: 100%;
+  height: 100%;
+  background: red;
+  display: inline-block;
+}
+.hot{
+    width: 100%;
+  height: 100%;
+     display: inline-block;
+  background: blue;
+}
+.user-info{
+  width: 100%;
+  height: 30%;
+  display: flex;
+  align-items: center;
+}
+.user-content{
+  width: 100%;
+}
+.pinglun{
+  width: 100%;
+  height: 30%;
+
+}
+
+
+.current {
+  margin: 0 auto;
+    width: 100%;
+  height: 500rpx;
+  /* background: papayawhip; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  /* border: 2rpx solid #f7f7f7; */
+    box-shadow: 1rpx 1rpx 20rpx #E1E1E4;
+    background: white;
+}
+
+.current-text {
+  width: 70%;
+  height: 150rpx;
+  /* background: tomato; */
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  flex-wrap: wrap;
+}
+
+.current-text-cont {
+  width: 100%;
+  height: 100rpx;
+  font-size: 25rpx;
+  /* background: aquamarine; */
+  text-align:left;
+  padding: 0rpx 20rpx;
+}
+.current-image image{
+  width: 100%;
+  height: 100%;
+}
+
+.current-text-Identification {
+  width: 100%;
+  height: 20rpx;
+  font-size: 15rpx;
+  /* background: rgb(151, 223, 199); */
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  padding: 0rpx 20rpx;
+  padding-top:40rpx;
+  /* margin-top: -10rpx; */
+}
+.Identification .tiem {
+  width: 30%;
+  height: 20rpx;
+}
+.touxiang{
+  width: 13%;
+  height: 61%;
+  margin-left: 10rpx;
+  border-radius: 30px;
+}
+.touxiang image{
+width:100%;
+height:100%;
+border-radius:50%;
+}
+.nicheng{
+  width: 45%;
+  height: 100%;
+  display: flex;
+  margin-left: 15rpx;
+  flex-direction: column;
+  justify-content: flex-start;
+
+}
+.liulanliang{
+  margin-top:8rpx;
+  margin-left: 20rpx; 
+  font-size:18rpx;
+color:rgba(0, 0, 0, 0.5);
+}
+.top{
+  margin-top: 33rpx;
+  font-size: 30rpx;
+  font-weight: 600;
+  display: flex;
+  justify-content: flex-start;
+}
+.time{
+  margin-top: 8rpx;
+    font-size: 18rpx;
+    color: rgba(0, 0, 0, 0.5);
+}
+.con{
+width: 98%;
+height: 100%;
+flex-wrap: wrap;
+font-size: 21rpx;
+display: flex;
+justify-content: flex-start;
+}
+.con text{
+  margin-top: 10rpx;
+  margin-left: 15rpx;
+}
+.p-con{
+  width: 19%;
+  height: 100%;
+  float: right;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  font-size: 20rpx;
+  color: rgba(0, 0, 0, 0.5);
+}
+.p-number{
+  margin-left: 7rpx;
+}
+.huifu{
+  width: 100%;
+  display: flex;
+  flex-direction: column;
+  margin-top: 25rpx;
+}
+.huifu-lan{
+  width: 100%;
+  height: 90rpx;
+  display: flex;
+  align-items: center;
+  background: white;
+
+}
+.font{
+font-size: 30rpx;
+font-weight: 600;
+margin-left: 30rpx;
+}
+.num{
+ font-size: 25rpx; 
+ margin-left: 22rpx;
+ color: rgba(0, 0, 0, 0.6)
+}
+.current2 {
+  margin-top: 8rpx;
+    width: 100%;
+  height: 250rpx;
+  /* background: papayawhip; */
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  /* border: 2rpx solid #f7f7f7; */
+    box-shadow: 1rpx 1rpx 20rpx #E1E1E4;
+    background: white;
+}
+.touxiang2{
+  width:7%;
+height:67%;
+margin-left:10rpx;
+border-radius:30px;
+
+}
+.touxiang2 image{
+width:100%;
+height:100%;
+border-radius:50%;
+
+}
+.top2{
+  margin-top: 15rpx;
+  font-size: 30rpx;
+  font-weight: 600;
+  display: flex;
+  justify-content: flex-start;
+}
