--- a/pages/user/Card/Card.wxss
+++ b/pages/user/Card/Card.wxss
@@ -72,21 +72,23 @@ page {
 }
 .left{
   /* border: 1px solid black; */
-  margin-left: 40rpx;
-  margin-right: 40rpx;
+  padding-left: 40rpx;
+ 
+  width: 15%;
 }
 .center{
   width: 50%;
   /* border: 1px solid black; */
   color: #000;
   font-size:30rpx;
+   margin-left: 40rpx;
 }
 .time{
   color: #9f9f9f;
 }
 .right{
   width: 20%;
- margin-right: 20rpx;
+ padding-right: 20rpx;
 /* border: 1px solid black; */
 }
 .price{
