--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -34,8 +34,8 @@
       <view class='order-all'>
         <view class='btn-cancelOrder' wx:if="{{item.state == 4}}" data-orderid='{{item.orderId}}' catchtap='cancelOrder'>取消订单</view>
         <view class='btn-pay' wx:if="{{item.state == 4}}" catchtap='toPay' data-price='{{item.orderPrice}}' data-orderid='{{item.orderId}}'>去付款</view>
-        <view class='btn-stay' wx:if="{{item.order_state == 1 }}">等待卖家发货</view>
-        <view class='btn-refund' wx:if="{{item.order_state == 3 }}" catchtap='refundOrder' data-orderid='{{item.orderId}}'>申请退款</view>
+        <view class='btn-stay' wx:if="{{item.state == 1 }}">等待卖家发货</view>
+        <view class='btn-refund' wx:if="{{item.state == 3 }}" catchtap='refundOrder' data-orderid='{{item.orderId}}'>申请退款</view>
         <!-- <view class='btn-refund' wx:if="{{item.order_state == 3 && item.logistics == 0 }}">申请退款中</view> -->
         <view class='btn-finish' wx:if="{{item.order_state == 2}}">订单已完成</view>
         <view class='btn-confirm' wx:if="{{item.orderState == 2 && item.logistics == 1 }}" catchtap='confirmOrder' data-sellerid='{{item.sellerId}}' data-orderid='{{item.orderId}}' data-goodsname='{{item.goodsTitle}}' data-orderprice='{{item.orderPrice}}'>确认收货</view>
