--- a/pages/user/index.wxss
+++ b/pages/user/index.wxss
@@ -98,7 +98,8 @@ page {
 .userInfo {
   width: 100%;
   height: 250rpx;
-  background: linear-gradient(to bottom, #ef696c, #ffa07a);
+  background: linear-gradient(to bottom, #44960E
+, rgba(0,0,0,0.1));
   position: relative;
   /* border-radius: 20rpx;
   margin-top: 30rpx; */
