--- a/pages/start/start.wxml
+++ b/pages/start/start.wxml
@@ -13,7 +13,7 @@
 </view>
 <view wx:else>请升级微信版本</view>
 </view>
-<!-- <block wx:if="{{cloudsShow}}">
+<block wx:if="{{userInfo.isBound == 2}}">
   <view>
     <view class='getphone_buttom'>
       <view bindtap='clouds' class='clous'></view>
@@ -22,4 +22,4 @@
     <image class='getPhone_img' src='https://www.sxscott.com/crazyBirdimg/test/bindPhone.png'></image>
     <view class='getPhone_box'></view>
   </view>
-</block> -->
+</block>
