--- a/pages/Mall/Mall.wxml
+++ b/pages/Mall/Mall.wxml
@@ -19,7 +19,7 @@
             </view>
       </view>
        <view class='fujin-content'>
-          <view class='cont1' wx:for="{{fujinlist}}" wx:key="*this" data-id="{{item.id}}">
+          <view class='cont1' wx:for="{{fujinlist}}" bindtap='dianjia' wx:key="*this" id="{{item.id}}">
             <view class='sj-logo'>
             <image src='{{item.simage}}'></image>
             </view>
