--- a/pages/user/AddressAdd/AddressAdd.wxss
+++ b/pages/user/AddressAdd/AddressAdd.wxss
@@ -32,7 +32,7 @@ border-bottom: 1rpx solid #dddcdc;
 }
 
 .bottomBtn{
-  background-color: #ef696c;
+  background-color: green;
     color:#fff;
     font-size: 28rpx;
     width: 90%;
