--- a/pages/user/AddressEdit/AddressEdit.wxss
+++ b/pages/user/AddressEdit/AddressEdit.wxss
@@ -52,7 +52,7 @@ page{
     box-sizing: border-box;
 }
 .save-btn{
-    background-color: #ef696c;
+    background-color: green;
     color:#fff;
     font-size: 28rpx;
 }
