--- a/pages/user/Address/Address.wxss
+++ b/pages/user/Address/Address.wxss
@@ -73,7 +73,7 @@
   position: fixed;
   width: 100%;
   height: 80rpx;
-  background: #ef696c ;
+  background: green ;
   bottom: 0;
   text-align: center;
   line-height: 80rpx;
