--- a/pages/user/Store/Store.wxss
+++ b/pages/user/Store/Store.wxss
@@ -73,7 +73,7 @@ border-bottom: 1rpx solid #dddcdc;
   bottom: 0;
   width: 100%;
   height: 80rpx;
-  background: red;
+  background: green;
   color:#fff;
   font-size: 34rpx;
   line-height: 80rpx;
