--- a/pages/xiangqing/xiangqing.wxss
+++ b/pages/xiangqing/xiangqing.wxss
@@ -255,3 +255,9 @@ border-radius:50%;
   display: flex;
   justify-content: flex-start;
 }
+
+.shuru{
+  width: 100%;
+  height: 100rpx;
+  background: red;
+}
