--- a/pages/searchres/searchres.wxml
+++ b/pages/searchres/searchres.wxml
@@ -1,7 +1,7 @@
 <view class='Mall-page'>
   <view class='search' bindtap='toSearch'>
     <view class='search-main'>
-      <view class='search-icon iconfont icon-sousuo'></view>
+      <view class='search-icon iconfont icon-search'></view>
       <text class='search-main-text'>请输入商家或商品名称</text>
     </view>
   </view>
@@ -17,6 +17,11 @@
                 <text>评价好</text>
               </view>
             </view>
+      </view>
+      <view class='cainixihuan'>
+      <view class='like-con'>
+      <view class='line'></view>   <view class='font'><view class='iconfont icon-aixin'></view>猜你喜欢</view>     <view class='line'></view>
+      </view>
       </view>
        <view class='fujin-content'>
           <view class='cont1' wx:for="{{fujinlist}}" wx:key="*this" data-id="{{item.id}}">
