--- a/pages/secondHand/secondHandSearch.wxss
+++ b/pages/secondHand/secondHandSearch.wxss
@@ -19,12 +19,13 @@
   border-radius: 100rpx;
   padding:5rpx;
   margin-left: 5%;
+  display: flex;
+  align-items: center;
 }
 
 .left icon{
   float: left;
   margin-left: 10rpx;
-  margin-top:12rpx;
   margin-right: 10rpx;
 }
 .left input{
