--- a/pages/view/view.wxml
+++ b/pages/view/view.wxml
@@ -23,7 +23,7 @@
       <text bindtap='label1' class="{{time===false? 'labelColor':''}}" data-index="{{time}}">排队时间短</text>
       <text bindtap='label2' class="{{efficiency===false?'labelColor':''}}" data-index="{{efficiency}}">效率高</text>
       <text bindtap='label3' class="{{environment===false?'labelColor':''}}" data-index="{{environment}}">门店环境好</text>
-      <text bindtap='label4' class="{{professional===false?'labelColor':''}}" data-index="{{professional}}">很专业</text> 
+      <text bindtap='label4' class="{{professional===false?'labelColor':''}}" data-index="{{professional}}">味道好</text> 
     </view>
   </view>
   <!--图片-->
@@ -34,9 +34,9 @@
     <view class='right'>
        <view class="parcel" wx:for="{{pics}}" wx:key="{{index}}">
        <image src="{{pics[index]}}" class="According" data-index="{{index}}" mode="aspectFill" bindtap="previewImg"></image>
-       <image src="{{staticImg}}home/order/apply/error.png" class='deleteimg' catchtap="deleteImg" data-index="{{index}}"></image>
+       <image src="/../images/deletPic.png" class='deleteimg' catchtap="deleteImg" data-index="{{index}}"></image>
        </view>
-      <image src='/pages/service/img/add.png' class='add' bindtap='choose'></image>
+      <image src='/../images/addpic.png' class='add' bindtap='choose'></image>
     </view>
   </view>
 </view>
@@ -47,4 +47,4 @@
     </textarea>
 </view>
 <!--提交评价-->
-<button class='btn'>提交评价</button>
+<button class='btn' bindtap='sumbitView'>提交评价</button>
