--- a/pages/orderDetail/orderDetail.wxml
+++ b/pages/orderDetail/orderDetail.wxml
@@ -8,14 +8,14 @@
 <view class='order-mes'>
   <image class='order-mes-img' src='https://s2.ax1x.com/2019/03/06/kvF0qU.jpg' data-img='{{item}}' mode='aspectFill' wx:key="key"></image>
   <view class='orderTitle'>
-    <view class='orderTitle-text'>大城市的出生地{{item.content}}</view>
+    <view class='orderTitle-text'>银耳红枣汤{{item.content}}</view>
     <view class='orderNum'>x1{{item.num}}</view>
   </view>
-  <view class='orderPrice'>￥1{{item.price}}</view>
+  <view class='orderPrice'>￥7{{item.price}}</view>
 </view>
 <view class='orderTotalPrice'>
   <view class='orderSum'>订单总价</view>
-  <view class='orderTotalPrice-text'>￥1{{item.sum}}</view>
+  <view class='orderTotalPrice-text'>￥7{{item.sum}}</view>
 </view>
 </view>
 <view class='peisong'>
@@ -24,15 +24,15 @@
   </view>
   <view class='peisong-item'>
     <view class='itemTitle'>收货人</view>
-    <view class='itemMes'>汪超</view>
+    <view class='itemMes'>葛寅{{item.consignee}}</view>
   </view>
   <view class='peisong-item'>
     <view class='itemTitle'>收货人电话</view>
-    <view class='itemMes'>15133342345</view>
+    <view class='itemMes'>15133342345{{item.receivePhone}}</view>
   </view>
   <view class='peisong-item'>
     <view class='itemTitle'>收货人地址</view>
-    <view class='itemMes'>绍兴文理学院元培学院北门</view>
+    <view class='itemMes'>绍兴文理学院元培学院北门{{item.receiveAddress}}</view>
   </view>
 </view>
 <view class='peisong'>
