--- a/pages/user/ideaBack/ideaBack.wxss
+++ b/pages/user/ideaBack/ideaBack.wxss
@@ -84,7 +84,7 @@ position:relative;
   bottom: 0;
   width: 100%;
   height: 80rpx;
-  background: #ff4042;
+  background: green;
   color: #fff;
   font-size: 34rpx;
   line-height: 80rpx;
