--- a/pages/view/view.wxss
+++ b/pages/view/view.wxss
@@ -138,7 +138,7 @@ textarea {
   width: 687rpx;
 }
 .areas{
-  height:315rpx;
+  height:350rpx;
   font-size: 30rpx;
   padding-top: 30rpx;
   margin: 0 auto;
@@ -165,7 +165,7 @@ textarea {
   line-height: 80rpx;
   font-size: 30rpx;
   color: #fff;
-  background: #c00;
+  background:green;
   position: fixed;
   left:75rpx;
   bottom: 37rpx;
