--- a/pages/order/order.wxml
+++ b/pages/order/order.wxml
@@ -30,19 +30,22 @@
     <view class='orderTotalPrice'>
       <view class='orderTotalPrice-text'>合计：￥{{item.sum}}</view>
     </view>
-    <view class='orderBtn'>
+  </view>
+  <modal hidden="{{hiddenRefund}}" title="申请退款" confirm-text="提交" cancel-text="取消" bindcancel="cancelRefund" bindconfirm="confirmRefund">
+    <input type='text' class='input-refund' bindinput='input_refund' value='{{input_refund}}' placeholder="请输入退款原因" />
+  </modal><view class='orderBtn'>
       <view class='order-all'>
-        <view class='btn-cancelOrder' wx:if="{{item.state }}" data-orderid='{{item.orderId}}' catchtap='cancelOrder'>退款</view>
-        <!-- <view class='btn-pay' wx:if="{{item.state }}" catchtap='toPay' data-price='{{item.orderPrice}}' data-orderid='{{item.orderId}}'>去付款</view>
-        <view class='btn-stay' wx:if="{{item.state  }}">等待卖家发货</view>
-        <!-- <view class='btn-refund' wx:if="{{item.state == 3 }}" catchtap='refundOrder' data-orderid='{{item.orderId}}'>申请退款</view> -->
-        <!-- <view class='btn-refund' wx:if="{{item.order_state == 3 && item.logistics == 0 }}">申请退款中</view> -->
-        <!-- <view class='btn-finish' wx:if="{{item.order_state == 2}}">订单已完成</view> -->
-        <!-- <view class='btn-confirm' wx:if="{{item.orderState == 2 && item.logistics == 1 }}" catchtap='confirmOrder' data-sellerid='{{item.sellerId}}' data-orderid='{{item.orderId}}' data-goodsname='{{item.goodsTitle}}' data-orderprice='{{item.orderPrice}}'>确认收货</view> --> 
-        <!-- <view class='btn-refund' wx:if="{{item.orderState == 2 && item.logistics == 1 }}">申请退款中</view> -->
+        <view class='btn-cancelOrder' wx:if="{{item.orderState == 0}}" data-orderid='{{item.orderId}}' catchtap='cancelOrder'>取消订单</view>
+        <view class='btn-pay' wx:if="{{item.orderState == 0}}" catchtap='toPay' data-price='{{item.orderPrice}}' data-orderid='{{item.orderId}}'>去付款</view>
+        <view class='btn-stay' wx:if="{{item.orderState == 1 && item.logistics == 0 }}">等待卖家发货</view>
+        <view class='btn-refund' wx:if="{{item.orderState == 1 && item.logistics == 0 }}" catchtap='refundOrder' data-orderid='{{item.orderId}}'>申请退款</view>
+        <view class='btn-refund' wx:if="{{item.orderState == 3 && item.logistics == 0 }}">申请退款中</view>
+        <view class='btn-finish' wx:if="{{item.orderState == 2}}">订单已完成</view>
+        <view class='btn-confirm' wx:if="{{item.orderState == 1 && item.logistics == 1 }}" catchtap='confirmOrder' data-sellerid='{{item.sellerId}}' data-orderid='{{item.orderId}}' data-goodsname='{{item.goodsTitle}}' data-orderprice='{{item.orderPrice}}'>确认收货</view>
+        <view class='btn-refund' wx:if="{{item.orderState == 3 && item.logistics == 1 }}">申请退款中</view>
       </view>
 
-    </view>
+   
   </view>
   <modal hidden="{{hiddenRefund}}" title="申请退款" confirm-text="提交" cancel-text="取消" bindcancel="cancelRefund" bindconfirm="confirmRefund">
     <input type='text' class='input-refund' bindinput='input_refund' value='{{input_refund}}' placeholder="请输入退款原因" />
