--- a/pages/xiangqing/xiangqing.wxss
+++ b/pages/xiangqing/xiangqing.wxss
@@ -10,6 +10,9 @@ page {
   height: 300rpx;
   margin-bottom: 22rpx;
 }
+.huifu-content{
+  margin-bottom: 20rpx;
+}
 .bot{
   display: flex;
   align-items: center;
@@ -71,6 +74,7 @@ margin-top: 15rpx;
 .user-info{
   width: 100%;
   height: 80rpx;
+  margin-top: 15rpx;
   display: flex;
   align-items: center;
 }
@@ -140,8 +144,8 @@ margin-top: 15rpx;
   height: 20rpx;
 }
 .touxiang{
-  width: 13%;
-  height: 61%;
+  width: 100rpx;
+  height: 100rpx;
   margin-left: 10rpx;
   border-radius: 30px;
 }
@@ -166,7 +170,7 @@ border-radius:50%;
 color:rgba(0, 0, 0, 0.5);
 }
 .top{
-  margin-top: 33rpx;
+  margin-top: 10rpx;
   font-size: 30rpx;
   font-weight: 600;
   display: flex;
@@ -186,6 +190,7 @@ display: flex;
 margin-top: 10rpx;
 flex-direction: column;
 justify-content: flex-start;
+ word-break:break-all;
 }
 .con text{
   margin-top: 10rpx;
@@ -208,7 +213,7 @@ justify-content: flex-start;
   width: 100%;
   display: flex;
   flex-direction: column;
-  margin-top: 25rpx;
+  margin-top: 15rpx;
 }
 .huifu-lan{
   width: 100%;
@@ -229,11 +234,12 @@ margin-left: 30rpx;
  color: rgba(0, 0, 0, 0.6)
 }
 .current2 {
-  margin-top: 8rpx;
+  margin-top: 15rpx;
     width: 100%;
   /* height: 350rpx; */
   /* background: papayawhip; */
   display: flex;
+  border-radius: 8px;
   flex-direction: column;
   justify-content: space-between;
   /* border: 2rpx solid #f7f7f7; */
@@ -270,7 +276,37 @@ border-radius:50%;
 .xiaohuifu{
 
   width: 80%;
-  height: 100rpx;
-  background: rgba(0, 0, 0, 0.3);
+  margin-top: 15rpx;
   margin-left: 5%;
+}
+.son{
+  width: 100%;
+  height: 33%;
+  display: flex;
+  align-items: center;
+  justify-content: flex-start;
+  font-size: 27rpx;
+  padding: 3%;
+    background: rgba(0, 0, 0, 0.05);
+    border-top-left-radius: 4px;
+      border-top-right-radius: 4px;
+    word-break:break-all;
+    flex-flow: wrap;
+}
+.son-con{
+   width: 100%;
+  margin-left: 10rpx;
+  line-height: 30rpx;
+  display: flex;align-items: center;
+ 
+}
+.quanbu{
+  width: 100%;
+  height: 30rpx;
+  background: rgba(0, 0, 0, 0.05);
+  display: flex;
+  justify-content:flex-start;
+  align-items: center;
+  padding: 3%;
+  color: rgba(0, 0, 0, 0.3);
 }
