--- a/pages/user/Money/Money.wxml
+++ b/pages/user/Money/Money.wxml
@@ -1,30 +1,16 @@
-<view class="user_content">
-  <view class="user_head">
-    <view class="user_img domain">
-      <view class="userinfo-avatar">账户余额</view>
-      <view class="userinfo_name">￥300.00</view>
-    </view>
-  </view>
-  <view class="user_edit_con">
-    <navigator wx:for="{{ items }}" url="{{ item.url}}">
-      <view class="user_edit_li">
-        <view class="user_edit_li_title">
-          <text class="{{ item.image }}" style="{{ item.color }}"></text>
-          <text class="fr grey">{{ item.text }}</text>
-          <text class="iconfont icon-you"></text>
+<view  class='Money'>
+     <view class='money-box'>   
+        <view class='top-content'>
+            <view class='moneyImg iconfont icon-wodezijin'></view>
+            <view class='change'>我的零钱</view>
+            <view class='money'>
+            <view class='symbol'>￥</view>
+            <view class='number'>3.04</view>
+            </view>
         </view>
-      </view>
-    </navigator>
-  </view>
-  <view class="user_edit_con">
-    <navigator wx:for="{{ items2 }}" url="{{ item.url}}">
-      <view class="user_edit_li">
-        <view class="user_edit_li_title">
-          <text class="{{ item.image }}" style="{{ item.color }}"></text>
-          <text class="fr grey">{{ item.text }}</text>
-          <text class="iconfont icon-you"></text>
+        <view class='bottom-btn'>
+         <button class='chongzhi' type='primary' >充值</button>
+         <button class='tixian'  >提现</button>
         </view>
-      </view>
-    </navigator>
-  </view>
+     </view>
 </view>
